tests/baselines/reference/noImplicitReturnsWithoutReturnExpression.errors.txt
noImplicitReturnsWithoutReturnExpression.ts(2,5): error TS7030: Not all code paths return a value.
noImplicitReturnsWithoutReturnExpression.ts(22,9): error TS7030: Not all code paths return a value.


==== noImplicitReturnsWithoutReturnExpression.ts (2 errors) ====
    function isMissingReturnExpression(): number {
        return;
        ~~~~~~
!!! error TS7030: Not all code paths return a value.
    }
    
    function isMissingReturnExpression2(): any {
        return;
    }
    
    function isMissingReturnExpression3(): number|void {
        return;
    }
    
    function isMissingReturnExpression4(): void {
        return;
    }
    
    function isMissingReturnExpression5(x) {
        if (x) {
            return 0;
        }
        else {
            return;
            ~~~~~~
!!! error TS7030: Not all code paths return a value.
        }
    }
    